# backend-python-gen

./: .coverage  README.md  financial_tracker.db  pyproject.toml  run.py  test_api.sh
memory-bank/: README-repository-pattern.md  activeContext.md  productContext.md  progress.md  projectbrief.md  repository-pattern-refactoring-plan.md  systemPatterns.md  techContext.md
src/ai_worthy_api_roo_1/: __init__.py  dependencies.py  main.py
src/ai_worthy_api_roo_1/api/: auth.py  transactions.py  users.py
src/ai_worthy_api_roo_1/core/: __init__.py  config.py  security.py
src/ai_worthy_api_roo_1/database/: __init__.py  database.py  models.py
src/ai_worthy_api_roo_1/middleware/: __init__.py  auth.py
src/ai_worthy_api_roo_1/repositories/: __init__.py  base.py  tag_repository.py  transaction_repository.py  unit_of_work.py  user_repository.py
src/ai_worthy_api_roo_1/schemas/: __init__.py  auth.py  transaction.py  user.py
src/ai_worthy_api_roo_1/services/: __init__.py  auth_service.py  transaction_service.py  user_service.py
tests/: __init__.py
tests/api/: test_transactions_api.py
tests/repositories/: test_unit_of_work.py  test_user_repository.py
tests/services/: test_transaction_service.py  test_user_service.py
